Add and update files for Organizing My JS new lesson, Webpack

--- a/webpack-practice/src/styles.css
+++ b/webpack-practice/src/styles.css
@@ -1,3 +1,6 @@
+/* in dist directory, Webpack gives my bundled image a new name by 
+hashing its content */
+
 body {
   background-color: rebeccapurple;
 }
